--- a/CryptoPicks/css/master.css
+++ b/CryptoPicks/css/master.css
@@ -1,4 +1,3 @@
-
 /* MEDIA QUERIES */
 
 /* Small devices (landscape phones, 576px and up) */
@@ -9,3 +8,10 @@
 @media (min-width: 992px) { ... }
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { ... }
+
+/*
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+} */
